--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
   <title>Indecision App</title>
 </head>
 <body>
-  <h1>This is what we play for!</h1>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.4.2/umd/react.production.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.4.2/umd/react-dom.production.min.js"></script>
+  <script src="/scripts/app.js"></script>
 </body>
 </html>
